Basic Layout start

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-TELEGRAM_API_ID=
-TELEGRAM_API_HASH=
+TELEGRAM_API_ID=23683321
+TELEGRAM_API_HASH=5d816375c95a7be785a230612d826220
 
 BASE_URL=https://web.telegram.org/a/
